Fix solution action buttons stacking on small screens

--- a/wp-content/themes/chassesautresor/assets/scss/_general.scss
+++ b/wp-content/themes/chassesautresor/assets/scss/_general.scss
@@ -433,6 +433,12 @@ tbody tr:nth-child(even) {
   text-align: center;
 }
 
+.solutions-table .solution-action-buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
 .solutions-table .badge-action {
   display: inline-flex;
   align-items: center;
